# Projet-hackathon

./: pyproject.toml
project/: __init__.py  board.py  checkerboard.py  cmd_line.py  dir.py  main.py  solver.py  taquin.py  tile.py
tests/: test_board.py
