[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Louise de Ferran <louise.deferran@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
taquin = "project.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
