[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Louise de Ferran <louise.deferran@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
numpy = "^2.2.2"

[tool.poetry.scripts]
taquin = "project.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
